Fix search box sometimes slightly too big or too small dependeing on device
Test Plan:
- Reload, make sure it looks righ
- Make sure scrolling still works

--- a/css/app.css
+++ b/css/app.css
@@ -26,13 +26,8 @@ section[role="region"] > header:first-child h1 {
 }
 
 section[data-type="list"] {
-    top: 8.4rem;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
     width: 100%;
     overflow-y: scroll !important;
-    position: absolute;
     height: calc(100% - 8rem);
     background-color: white;
 }
@@ -467,4 +462,8 @@ article {
 .transcript-item div:first-child {
     color: #999;
     margin-right: 1rem;
+}
+
+.topic-list-container {
+    height: 100% !important;
 }
